--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'kotlin-android'
 }
 
 android {
@@ -44,4 +46,6 @@ dependencies {
     // Dependencies for Dagger 2
     implementation 'com.google.dagger:dagger:2.40.5'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.40.5'
+    kapt 'com.google.dagger:dagger-android-processor:2.15'
+    kapt 'com.google.dagger:dagger-compiler:2.40.5'
 }
